--- a/01_CoreSpring_DI/pom.xml
+++ b/01_CoreSpring_DI/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mycompany</groupId>
-    <artifactId>01_CoreSpring</artifactId>
+    <artifactId>01_CoreSpring_DI</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
