--- a/03_SpringWeb_MVC/03_SpringWeb_MVC/pom.xml
+++ b/03_SpringWeb_MVC/03_SpringWeb_MVC/pom.xml
@@ -65,6 +65,12 @@
       <!--<scope>test</scope>-->
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.tiles</groupId>
+      <artifactId>tiles-extras</artifactId>
+      <version>3.0.5</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
     <dependency>
       <groupId>org.apache.commons</groupId>
