--- a/07_SpringWeb_MVC_Advanced/07_SpringWeb_MVC_Advanced/src/main/resources/ValidationMessages.properties
+++ b/07_SpringWeb_MVC_Advanced/07_SpringWeb_MVC_Advanced/src/main/resources/ValidationMessages.properties
@@ -3,3 +3,7 @@ lastName.size=Last name must be between {min} and {max} characters long.
 username.size=Username must be between {min} and {max} characters long.
 password.size=Password must be between {min} and {max} characters long.
 email.valid=The email address must be valid.
+
+message.size=Message must be between {min} and {max} characters long.
+latitude.size=latitude must be between {min} and {max} characters long.
+longitude.size=longitude must be between {min} and {max} characters long.
