--- a/09_SpringWebSecurity/09_SpringWebSecurity/pom.xml
+++ b/09_SpringWebSecurity/09_SpringWebSecurity/pom.xml
@@ -97,6 +97,13 @@
       <version>2.1.4.RELEASE</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity3 -->
+    <dependency>
+      <groupId>org.thymeleaf.extras</groupId>
+      <artifactId>thymeleaf-extras-springsecurity3</artifactId>
+      <version>2.1.3.RELEASE</version>
+    </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
     <dependency>
